<resources>
    <string name="app_name">HousePlan</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="Home_desc">What Do You Require? Will Match Any One Of The Four Options.</string>

    <string name="APP_TITLE"> House Plans</string>
    <string name="REGISTER">Register?</string>
    <string name="LOGIN">LogIn</string>
    <string name="Forgot_password">Forgot Password?</string>
    <string name="HOME"> Home</string>
    <color name="app_themecolor">#0D6877</color>
    <color name="light_violet_color">#1cd7da</color>

    <string name="indicator">\ue900</string>
    <string name="lovewithstroke">\ue901</string>
    <string name="arrowleft">\ue902</string>
    <string name="camera">\ue903</string>
    <string name="circleerror">\ue904</string>
    <string name="comment">\ue905</string>
    <string name="cubelove">\ue906</string>
    <string name="cubefilllove">\ue907</string>
    <string name="arrowright">\ue908</string>
    <string name="plus">\ue909</string>
    <string name="grid">\ue90a</string>
    <string name="home">\ue90b</string>
    <string name="imageplaceholder">\ue90c</string>
    <string name="listicon">\ue90d</string>
    <string name="location">\ue90e</string>
    <string name="locationblue">\ue90f</string>
    <string name="lock">\ue910</string>
    <string name="mail">\ue911</string>
    <string name="nexticon">\ue912</string>
    <string name="person">\ue913</string>
    <string name="profile">\ue914</string>
    <string name="profilepicplaceholder">\ue915</string>
    <string name="triangle">\ue918</string>
    <string name="search">\ue919</string>
    <string name="setting">\ue91a</string>
    <string name="checkcorrect">\ue91b</string>
    <string name="triangletwo">\ue91c</string>
    <string name="triangleup">\ue91d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_plan">PlanActivity</string>
    <string name="title_activity_filtered_plan">FilteredPlanActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_purchase_plan">PurchasePlanActivity</string>
    <string name="purchase_text">This application is for personal use only and not to be used commercially or reproduced in any way. Users may purchase pdf versions of the individual plans and use these privately without copyright implications.</string>

    <string name="FAQ_TEXT">FAQs: Frequently asked ques</string>
    <string name="Drop_query">Drop us a query</string>
    <string name="about">About the application</string>
    <string name="privacy">Privacy</string>
    <string name="change_password">Change your password</string>
    <string name="update_location">Update your current location</string>
    <string name="logout">Logout</string>
    <string name="title_activity_about_us">AboutUsActivity</string>

    <string name="About_us">Floor plans is released by VZ Designs, a building design company that produces residential building plans. They have been designing homes for 20 years.</string>
    <string name="title_activity_privacy">PrivacyActivity</string>
    <string name="title_activity_faq">FAQActivity</string>

    <string name="PURCHASE_APP">com.adbelsham.houseplans</string>
    <string name="PURCHASE_PLAN">com.adbelsham.purchaseplans</string>
    <string name="networkTitle">Internet connection is not available.</string>
    <string name="noPlanFound">No Plan Found.</string>
    <string name="IAP_BASE64_String">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEApWvSOpwXIpYoxO0Ee/M17h6wDN35T4wtUfh3ynX5dgFSkKqWu14groQ660P2GKFcB9ELVovyNv+PWdJfxsAf+v1GtNbN4uoojYTVQFGtju89joLsE3tkWcp98MPRWBJOu4H2EDIPmDw8IjNgrjNB2sM0JJi2Al2WL7Q3KcN5BRVof8gu5O4VLtXyS2dtbCyMSvxh5q4L13PuBZ8Wm73tLqumP+8wuhROugCVr3tRb5I9Jaa17uu1H6bXzR/9B789t6c7RYeV1GvwfP+OXT+a5RRozdRp9F8a3mLvQltq13drKoQbGQcRA3mC4kp+aDOYDF0cT/CrDBZu+QUvhTdG5QIDAQAB</string>

    <string name="Plan_Already_Purchased">Plan already purchased.</string>
    <string name="Plan_purchased">Plan purchased successfully, Plan download on your phone gallery</string>
    <string name="search_hint">Enter Location</string>
    <string name="search_text">Save</string>
</resources>
