<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_full_plan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/main_bg"
    android:orientation="vertical"
    tools:context="com.adbelsham.HousePlans.FullPlanActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#60000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/update_location"

            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <CustomControls.IconTextView
            android:id="@+id/backArrow"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/arrowleft"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/tool"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextSearch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorWhite"
                    android:hint="@string/search_hint"
                    android:textSize="12sp"
                    android:maxLines="2"
                    android:inputType="text"
                    android:paddingLeft="@dimen/fab_margin"
                    android:textColor="#000"
                    android:textColorHint="#000" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="#60000000"
                android:text="@string/search_text"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/fab_margin"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
     >
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/marker"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
</LinearLayout>
