<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/main_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#60000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/APP_TITLE"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CustomControls.IconTextView
                android:id="@+id/backArrow"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:gravity="center"
                android:text="@string/arrowleft"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@mipmap/edittext_bg"
                android:orientation="horizontal">

                <CustomControls.IconTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/profile"
                    android:textColor="@android:color/white" />

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:background="@android:color/transparent"
                    android:hint="Email ID"
                    android:paddingRight="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@mipmap/edittext_bg"
                android:orientation="horizontal">

                <CustomControls.IconTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/lock"
                    android:textColor="@android:color/white" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:background="@android:color/transparent"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:paddingRight="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@mipmap/edittext_bg"
                android:orientation="horizontal">

                <CustomControls.IconTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/lock"
                    android:textColor="@android:color/white" />

                <EditText
                    android:id="@+id/confirmPasswordEditText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:background="@android:color/transparent"
                    android:hint="Confirm Password"
                    android:inputType="textPassword"
                    android:paddingRight="10dp" />
            </LinearLayout>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/violet_corner_button"
                android:text="@string/REGISTER"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
